# pecko-cli

./: .gitignore  README.md  pyproject.toml
src/pecko/: __init__.py  __main__.py  cli.py
src/pecko/agents/: __init__.py  agent.py  planner.py  reviewer.py  worker.py
src/pecko/core/: config.py  model.py  paths.py  somthing.py  state.py
src/pecko/tools/: simple_fs.py
src/pecko/workflow/: graph.py
